DefaultJOSEObjectTypeVerifier for public key